# pTSDL-Game

./: CMakeLists.txt  CMakePresets.json  QuickBuild.cmd  README.md
src/: main.cpp
src/pTS/: CMakeLists.txt  pTSpace.cpp  pTSpace.h
src/pTS/core/: CMakeLists.txt  pTSCoreExporter.h  pTSEngine.cpp  pTSEngine.h  pTSTest.cpp
src/pTS/platform/: pTSPlatformConfig.h
src/pTS/support/: CMakeLists.txt  pTSLazyMacros.h  pTSMacros.h  pTSingleton.cpp  pTSingleton.h  pTSupportExporter.h
